2006-08-09  John Wiegley  <johnw@newartisans.com>

	* calendar/timeclock.el (timeclock-use-elapsed): Added a new
	variable, which causes timeclock to report elapsed time worked,
	instead of just work remaining.

2006-08-09  Kenichi Handa  <handa@m17n.org>

	* international/latexenc.el (latexenc-find-file-coding-system):
	Fix for the case that the 2nd element of arg-list is a cons.

2006-08-08  Chong Yidong  <cyd@stupidchicken.com>

	* info.el (Info-fontify-node): Handle preceding `in' for note
	reference hiding rules.

2006-08-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/sh-script.el (sh-quoted-subshell): Make sure we don't
	mistake a closing " for an opening one.

2006-08-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/xterm.el (terminal-init-xterm): Add more key bindings.

2006-08-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* complete.el (PC-do-completion): Filter out completions matching
	completion-ignored-extensions before checking whether there are
	multiple completions.
	Don't use `list' unnecessarily when building completion tables.

2006-08-06  Richard Stallman  <rms@gnu.org>

	* help.el (describe-mode): Make minor mode list more concise.

2006-08-05  Chong Yidong  <cyd@stupidchicken.com>

	* bindings.el: Give mode-line-format, mode-line-modes, and
	mode-line-position `standard-value' properties.

2006-08-05  Eli Zaretskii  <eliz@gnu.org>

	* buff-menu.el (list-buffers-noselect): For Info buffers, use
	"(file)node" instead of the file name.

2006-08-05  Richard Stallman  <rms@gnu.org>

	* faces.el (escape-glyph): Doc fix.

2006-08-04  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (describe-font): Improve docstring
	and error message.  Use frame-parameter (not frame-parameters).

2006-08-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/gud.el (gdb-script-font-lock-syntactic-keywords):
	Correctly mark the end-of-docstring char.

2006-08-03  Chong Yidong  <cyd@stupidchicken.com>
