@@ -1,3 +1,12 @@
+2006-08-09  Chong Yidong  <cyd@stupidchicken.com>
+
+	* avoid.el (mouse-avoidance-animating-pointer): New var.
+	(mouse-avoidance-nudge-mouse): Use it.
+	(mouse-avoidance-banish): Rename from mouse-avoidance-banish-hook.
+	(mouse-avoidance-exile): Rename from mouse-avoidance-exile-hook
+	(mouse-avoidance-fancy): Rename from mouse-avoidance-fancy-hook.
+	Don't activate if currently animating.  All callers changed.
+
 2006-08-09  John Wiegley  <johnw@newartisans.com>
 
 	* calendar/timeclock.el (timeclock-use-elapsed): Added a new
